[metadata]
name = line_formaters
version = 1.0.0
description = A collection of line text formaters
long_description = file: README.rst
maintainer = BCL Mary
maintainer_email = bclmary@mailoo.org
url = https://github.com/bclmary/cyclic_sequences.git
license = GPL-3.0+
keywords = line text format formating formater align center justify columns
platforms = any
classifiers =
    # Development Status:
    #   1 - Planning
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    #   6 - Mature
    #   7 - Inactive
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 7
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
python_requires = >=3.4

